--- a/knoblibrary/src/main/res/values/attrs.xml
+++ b/knoblibrary/src/main/res/values/attrs.xml
@@ -29,6 +29,13 @@
         <attr name="kAnimationSpeed" format="float"/>
         <attr name="kAnimationBounciness" format="float"/>
 
+        <attr name="kSwipe">
+            <enum name="off" value="0"/>
+            <enum name="vertical" value="1"/>
+            <enum name="horizontal" value="2"/>
+        </attr>
+        <attr name="kSwipeSensitivityPixels" format="integer" />
+
         <attr name="kEnabled" format="boolean"/>
     </declare-styleable>
 </resources>
