--- a/knobsample/src/main/res/layout/activity_sample.xml
+++ b/knobsample/src/main/res/layout/activity_sample.xml
@@ -72,30 +72,6 @@
             <it.beppi.knoblibrary.Knob
                 android:layout_width="96dp"
                 android:layout_height="96dp"
-                app:kNumberOfStates="15"
-                app:kFreeRotation="false"
-                app:kMinAngle="-90.0"
-                app:kMaxAngle="180.0"
-                app:kStateMarkersAccentPeriodicity="3"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:lines="2"
-                android:text="Constaints and accented markers"
-                android:gravity="center"
-                />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:orientation="vertical">
-            <it.beppi.knoblibrary.Knob
-                android:layout_width="96dp"
-                android:layout_height="96dp"
                 app:kNumberOfStates="30"
                 app:kFreeRotation="false"
                 app:kMinAngle="-120.0"
@@ -116,7 +92,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:lines="2"
-                android:text="Fixed drawable"
+                android:text="Fixed drawable with constraints"
                 android:gravity="center"
                 />
 
@@ -154,6 +130,43 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:orientation="vertical">
+            <it.beppi.knoblibrary.Knob
+                android:layout_width="96dp"
+                android:layout_height="96dp"
+                app:kNumberOfStates="30"
+                app:kFreeRotation="false"
+                app:kKnobDrawable="@drawable/knob3"
+                app:kKnobDrawableRotates="false"
+                app:kIndicatorWidth="0dp"
+                app:kCircularIndicatorRelativeRadius="0.04"
+                app:kCircularIndicatorRelativePosition="0.7"
+                app:kCircularIndicatorColor="@color/green_a200"
+                app:kStateMarkersWidth="2dp"
+                app:kSelectedStateMarkerContinuous="true"
+                app:kStateMarkersRelativeLength="0.08"
+                app:kMinAngle="-120"
+                app:kMaxAngle="120"
+                app:kDefaultState="10"
+                app:kStateMarkersColor="@color/grey_800"
+                app:kSelectedStateMarkerColor="@color/green_a200"
+                app:kBorderWidth="0dp"
+                app:kAnimationSpeed="10"
+                app:kAnimationBounciness="20"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lines="2"
+                android:text="State markers continuous"
+                android:gravity="center"
+                />
+
+        </LinearLayout>
 
     </LinearLayout>
 
