--- a/knobsample/src/main/res/layout/activity_sample.xml
+++ b/knobsample/src/main/res/layout/activity_sample.xml
@@ -87,7 +87,8 @@
                 app:kBorderColor="@color/grey_800"
                 app:kAnimationSpeed="1"
                 app:kAnimationBounciness="3"
-                app:kSwipeSensitivityPixels="10"
+                app:kSwipeSensitivityPixels="7"
+                app:kShowBalloonValues="true"
                 />
             <TextView
                 android:layout_width="match_parent"
@@ -120,6 +121,12 @@
                 app:kBorderWidth="0dp"
                 app:kAnimationSpeed="0"
                 app:kAnimationBounciness="1"
+                app:kBalloonValuesRelativeposition="0"
+                app:kShowBalloonValues="true"
+                app:kBalloonValuesTextSize="6sp"
+                app:kBalloonValuesAnimation="scale"
+                app:kBalloonValuesTimeToLive="0"
+                app:kBalloonValuesSlightlyTransparent="false"
                 />
             <TextView
                 android:layout_width="match_parent"
@@ -144,22 +151,30 @@
                 app:kKnobDrawable="@drawable/knob3"
                 app:kKnobDrawableRotates="false"
                 app:kIndicatorWidth="0dp"
-                app:kCircularIndicatorRelativeRadius="0.04"
-                app:kCircularIndicatorRelativePosition="0.7"
+                app:kCircularIndicatorRelativeRadius="0.03"
+                app:kCircularIndicatorRelativePosition="0.55"
                 app:kCircularIndicatorColor="@color/green_a200"
-                app:kStateMarkersWidth="2dp"
+                app:kStateMarkersWidth="1dp"
                 app:kSelectedStateMarkerContinuous="true"
                 app:kStateMarkersRelativeLength="0.08"
+                app:kStateMarkersAccentPeriodicity="5"
+                app:kStateMarkersAccentRelativeLength="0.09"
+                app:kStateMarkersAccentColor="@color/grey_800"
+                app:kStateMarkersAccentWidth="2dp"
+                app:kStateMarkersColor="@color/grey_800"
+                app:kSelectedStateMarkerColor="@color/green_a200"
                 app:kMinAngle="-120"
                 app:kMaxAngle="120"
                 app:kDefaultState="10"
-                app:kStateMarkersColor="@color/grey_800"
-                app:kSelectedStateMarkerColor="@color/green_a200"
                 app:kBorderWidth="0dp"
                 app:kAnimationSpeed="10"
                 app:kAnimationBounciness="20"
-                app:kSwipeSensitivityPixels="30"
+                app:kSwipeSensitivityPixels="15"
                 app:kSwipe="vertical"
+                app:kBalloonValuesRelativeposition="0.25"
+                app:kShowBalloonValues="true"
+                app:kBalloonValuesTextSize="4sp"
+                app:kBalloonValuesAnimation="fade"
                 />
             <TextView
                 android:layout_width="match_parent"
@@ -179,6 +194,7 @@
             <it.beppi.knoblibrary.Knob
                 android:layout_width="96dp"
                 android:layout_height="96dp"
+                android:id="@+id/multistate_toggle"
                 app:kNumberOfStates="7"
                 app:kFreeRotation="true"
                 app:kKnobDrawable="@drawable/knob4"
@@ -196,6 +212,12 @@
                 app:kBorderWidth="2dp"
                 app:kAnimationSpeed="20"
                 app:kAnimationBounciness="5"
+                app:kBalloonValuesTextSize="8sp"
+                app:kShowBalloonValues="true"
+                app:kBalloonValuesArray="@array/multichoice"
+                app:kBalloonValuesTimeToLive="4000"
+                app:kBalloonValuesRelativeposition="0"
+                app:kBalloonValuesSlightlyTransparent="false"
                 />
             <TextView
                 android:layout_width="match_parent"
